# Capybara

./: .capybara.toml  .gitignore  README.md  README.zh-CN.md  logo.sixel  pyproject.toml  requirements.txt
agents/: __init__.py  __main__.py  coding_agent.py  edit_tracker.py  mcp_tool.py  productivity.py  project_context.py  skills.py  subagent.py  tui_backend.py  verify.py
core/: __init__.py  agent.py  config.py  context_manager.py  lifecycle.py  llm.py  llm_adapters.py  llm_response.py  mcp.py  message.py  resilience.py  session_store.py  trace.py
scripts/: convert_to_docx.py  make_logo.py
tools/: __init__.py  _edit_match.py  _safety.py  apply_patch.py  base.py  list_files.py  multi_edit.py  read_file.py  registry.py  replace_lines.py  run_command.py  search_text.py  workspace_info.py  write_file.py
tools/code_intel/: __init__.py  _common.py  ctags.py  fts.py  treesitter.py
ui/: README.md  app.js  commands.js  components.js  i18n.js  index.js  package.json  protocol.js
